SECURITY-3729